# masters-thesis

./: .gitignore  Makefile  README.md  VERSION  apsrev4-1-mh-mod.bst  macros.tex  pyproject.toml  sources.bib  thesis_doc.tex  thesis_talk.tex
proposal/doc/: 00_abschlussarbeit_erklaerung.tex  00_abstract.tex  01_introduction.tex  02_nuclear_hamiltonian.tex  03_wavefunction_expansion_methods.tex  04_imsrg_for_nuclear_structure.tex  05_results.tex  06_outlook.tex  doc.tex
proposal/doc/images/: he4_imsrg2_energies.py  pairing_ham_imsrg3.py  vnn_srg_emn500_n3lo.py
proposal/doc/images/data/: EM500new_data.json  (+1 more)
proposal/talk/: talk.tex
proposal/talk/images/: he4_imsrg2_energies.py  he4_imsrg2_flow.py  pairing_ham_imsrg3.py  pairing_ham_imsrg3_relative.py  vnn_srg_emn500_n3lo.py
thesis/doc/: 00_abschlussarbeit_erklaerung.tex  00_abstract.tex  00_acknowledgements.tex  00_meta_information.tex  00_titlepage.tex  01_introduction.tex  02_nuclear_hamiltonian.tex  03_wavefunction_expansion_methods.tex  04_imsrg_for_nuclear_structure.tex  05_angular_momentum_coupling.tex  06_jscheme_results.tex  07_conclusions.tex  a01_mscheme_fundamental_commutators.tex  a02_jscheme_simplification_strategies.tex  a03_pairing_hamiltonian_imsrg3.tex
thesis/doc/images/: he4_HF_results.py  he4_NAT_results.py  he4_imsrg2_results.py  pairing_ham_imsrg3.py  term_by_term_o16_plot.py
thesis/talk/images/: he4_HF_results.py  he4_NAT_results.py  he4_imsrg2_energies.py  he4_imsrg2_flow.py  he4_imsrg2_results.py  he4_imsrg2_results_with_NCSM.py  term_by_term_o16_plot.py  vnn_srg_emn500_n3lo.py
(+4 files in other folders)
