[tool.poetry]
name = "masters-thesis-plotting"
version = "0.1.0"
description = "Virtual environment to run the plotting scripts."
authors = ["Matthias Heinz <heinz.matthias.3@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.1"
scipy = "^1.5.2"
matplotlib = "^3.3.1"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
black = "^20.8b1"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
